@@ -2,7 +2,7 @@ package ch.martinelli.demo.jooq;
 
 import ch.martinelli.demo.jooq.database.tables.records.AthleteRecord;
 import ch.martinelli.demo.jooq.database.tables.records.CompetitionRecord;
-import ch.martinelli.demo.jooq.projection.AthleteDTO;
+import ch.martinelli.demo.jooq.projection.*;
 import org.jooq.DSLContext;
 import org.jooq.Record3;
 import org.jooq.Result;
@@ -15,7 +15,10 @@ import java.util.List;
 import static ch.martinelli.demo.jooq.database.tables.Athlete.ATHLETE;
 import static ch.martinelli.demo.jooq.database.tables.Club.CLUB;
 import static ch.martinelli.demo.jooq.database.tables.Competition.COMPETITION;
+import static ch.martinelli.demo.jooq.database.tables.Series.SERIES;
 import static org.assertj.core.api.Assertions.assertThat;
+import static org.jooq.Records.mapping;
+import static org.jooq.impl.DSL.*;
 
 @JooqTest
 public class QueryTest {
@@ -35,7 +38,9 @@ public class QueryTest {
     @Test
     void insert_athlete() {
         Long id = dsl.insertInto(ATHLETE)
-                .columns(ATHLETE.FIRST_NAME, ATHLETE.LAST_NAME, ATHLETE.GENDER, ATHLETE.YEAR_OF_BIRTH, ATHLETE.CLUB_ID, ATHLETE.ORGANIZATION_ID)
+                .columns(ATHLETE.FIRST_NAME, ATHLETE.LAST_NAME,
+                        ATHLETE.GENDER, ATHLETE.YEAR_OF_BIRTH,
+                        ATHLETE.CLUB_ID, ATHLETE.ORGANIZATION_ID)
                 .values("Mujinga", "Kambundji", "f", 1992, 1L, 1L)
                 .returningResult(ATHLETE.ID)
                 .fetchOneInto(Long.class);
@@ -67,13 +72,33 @@ public class QueryTest {
                 .fetch();
 
         assertThat(athletes).hasSize(1);
-        assertThat(athletes.get(0)).satisfies(athlete -> {
+        assertThat(athletes.getFirst()).satisfies(athlete -> {
             assertThat(athlete.get(ATHLETE.FIRST_NAME)).isEqualTo("Armand");
             assertThat(athlete.get(ATHLETE.LAST_NAME)).isEqualTo("Duplantis");
-            assertThat(athlete.get(CLUB.NAME)).isEqualTo("Louisiana State University");
+            assertThat(athlete.get(CLUB.NAME))
+                    .isEqualTo("Louisiana State University");
         });
     }
 
+    @Test
+    void projection_using_java_record_with_mapping() {
+        List<AthleteDTO> athletes = dsl
+                .select(asterisk())
+                .from(ATHLETE)
+                .join(CLUB).on(CLUB.ID.eq(ATHLETE.CLUB_ID))
+                .fetch(record ->
+                        new AthleteDTO(record.get(ATHLETE.FIRST_NAME),
+                                record.get(ATHLETE.LAST_NAME),
+                                record.get(CLUB.NAME)));
+
+        assertThat(athletes).hasSize(1);
+        assertThat(athletes.getFirst()).satisfies(athlete -> {
+            assertThat(athlete.firstName()).isEqualTo("Armand");
+            assertThat(athlete.lastName()).isEqualTo("Duplantis");
+            assertThat(athlete.clubName())
+                    .isEqualTo("Louisiana State University");
+        });
+    }
 
     @Test
     void projection_using_java_record() {
@@ -84,26 +109,11 @@ public class QueryTest {
                 .fetchInto(AthleteDTO.class);
 
         assertThat(athletes).hasSize(1);
-        assertThat(athletes.get(0)).satisfies(athlete -> {
+        assertThat(athletes.getFirst()).satisfies(athlete -> {
             assertThat(athlete.firstName()).isEqualTo("Armand");
             assertThat(athlete.lastName()).isEqualTo("Duplantis");
-            assertThat(athlete.clubName()).isEqualTo("Louisiana State University");
-        });
-    }
-
-    @Test
-    void projection_using_java_record_with_asterisk() {
-        List<AthleteDTO> athletes = dsl
-                .select(ATHLETE.FIRST_NAME, ATHLETE.LAST_NAME, CLUB.NAME)
-                .from(ATHLETE)
-                .join(CLUB).on(CLUB.ID.eq(ATHLETE.CLUB_ID))
-                .fetchInto(AthleteDTO.class);
-
-        assertThat(athletes).hasSize(1);
-        assertThat(athletes.get(0)).satisfies(athlete -> {
-            assertThat(athlete.firstName()).isEqualTo("Armand");
-            assertThat(athlete.lastName()).isEqualTo("Duplantis");
-            assertThat(athlete.clubName()).isEqualTo("Louisiana State University");
+            assertThat(athlete.clubName())
+                    .isEqualTo("Louisiana State University");
         });
     }
 
@@ -115,10 +125,47 @@ public class QueryTest {
                 .fetchInto(AthleteDTO.class);
 
         assertThat(athletes).hasSize(1);
-        assertThat(athletes.get(0)).satisfies(athlete -> {
+        assertThat(athletes.getFirst()).satisfies(athlete -> {
             assertThat(athlete.firstName()).isEqualTo("Armand");
             assertThat(athlete.lastName()).isEqualTo("Duplantis");
-            assertThat(athlete.clubName()).isEqualTo("Louisiana State University");
+            assertThat(athlete.clubName())
+                    .isEqualTo("Louisiana State University");
+        });
+    }
+
+    @Test
+    void nested_result() {
+        List<NestedAthleteDTO> athletes = dsl
+                .select(ATHLETE.FIRST_NAME, ATHLETE.LAST_NAME,
+                        row(ATHLETE.club().NAME).mapping(ClubDTO::new))
+                .from(ATHLETE)
+                .fetchInto(NestedAthleteDTO.class);
+
+        assertThat(athletes).hasSize(1);
+        assertThat(athletes.getFirst()).satisfies(athlete -> {
+            assertThat(athlete.firstName()).isEqualTo("Armand");
+            assertThat(athlete.lastName()).isEqualTo("Duplantis");
+            assertThat(athlete.club().name())
+                    .isEqualTo("Louisiana State University");
+        });
+    }
+
+    @Test
+    void projection_multiset() {
+        List<SeriesDTO> series = dsl
+                .select(SERIES.NAME,
+                        multiset(dsl
+                                .select(COMPETITION.NAME,
+                                        COMPETITION.COMPETITION_DATE)
+                                .from(COMPETITION)
+                                .where(COMPETITION.SERIES_ID.eq(SERIES.ID))
+                        ).convertFrom(r -> r.map(mapping(CompetitionDTO::new))))
+                .from(SERIES)
+                .fetchInto(SeriesDTO.class);
+
+        assertThat(series).hasSize(1);
+        assertThat(series.getFirst()).satisfies(competition -> {
+            assertThat(competition.name()).isEqualTo("Diamond League 2022");
         });
     }
 
